--- a/src/config/cfg1.agent.yaml
+++ b/src/config/cfg1.agent.yaml
@@ -1,4 +1,5 @@
 epsilon: 0.95 # Exploration Probability
-gamma: 0.95 # Discount Rate
-alpha: 0.0005 # Exploration Probability Decay Rate
+gamma: 0.75 # Discount Rate
+epsilon_decay: 0.01
+alpha: 0.1 # Exploration Probability Decay Rate
 num_epochs: 100
