--- a/src/config/cfg1.agent.yaml
+++ b/src/config/cfg1.agent.yaml
@@ -1,5 +1,5 @@
 epsilon: 0.95 # Exploration Probability
-gamma: 0.75 # Discount Rate
-epsilon_decay: 0.01
-alpha: 0.1 # Exploration Probability Decay Rate
-num_epochs: 100
+alpha: 0.01 # Exploration Probability Decay Rate
+min_exploration_probability: 0.1 # Minimum value epsilon can be
+gamma: 0.25 # Discount Rate
+num_epochs: 1000
